[gd_scene format=3 uid="uid://djfty110prxa"]

[ext_resource type="Script" uid="uid://bkc00nhi1132x" path="res://scripts/supply.gd" id="1_oixck"]
[ext_resource type="PackedScene" uid="uid://cyu4cuodbnnga" path="res://scenes/ui/progress_bar.tscn" id="2_v6bgk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wg11f"]
radius = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v6bgk"]
albedo_color = Color(0.35686275, 0.16078432, 0.011764706, 1)

[node name="Supply" type="Area3D" unique_id=1592287050 groups=["Resource"]]
script = ExtResource("1_oixck")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=122487818]
shape = SubResource("SphereShape3D_wg11f")
debug_color = Color(0.34651053, 0.43906677, 0, 0.41960785)

[node name="CollectingTimer" type="Timer" parent="." unique_id=1733804173]

[node name="ProgressBar" parent="." unique_id=691584359 instance=ExtResource("2_v6bgk")]
offset_left = -640.0
offset_right = -640.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="." unique_id=1283638491]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
radius = 2.0
height = 0.1
sides = 64
material = SubResource("StandardMaterial3D_v6bgk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
